1.6.21
-Added data.dataURI2Blob
-Added EasyPrint.toSVG
-Added data.blob2DataURL
-Added data.fetchAsBlob
-Added text.isDataURL
-Added text.escapeXhtml
-Added text.svgStringToDataURI
-Added web.canvasToBlob
-Added web.elementToSVGString
-Added web.genPrintWindowHTML
-Added web.printImageData
-Added cesium.CesiumMap.getViewer
-parser support PNG without EXIF

1.6.20
-Enhance XLSXExporter
-Added leaflet/EasyPrint.js
-Added domtoimage/index.js

1.6.19
-data.Timestamp.fromTicks support floating point ticks
-data.Duration.fromTicks support floating point ticks

1.6.18
-Change geometry.LinearRing.getHIntersactsCenter to getIntersactsCenter
-web.buildTable support StaticImage item
-Added media.genVector2DPreview
-Added media.DrawImage
-Added math.calcDir

1.6.17
-Fixed olayer2 types
-Added vector2D.hasArea
-Added Vector2D.calcHIntersacts
-Added Vector2D.getDisplayCenter
-Enhance math.GeoJSON.parseGeometry

1.6.16
-Fixed leaflet point icon

1.6.15
-shreadsheet Support Chart
-Added web.getCanvasElement, web.getImgElement
-Added export/GPXExporter.js
-data.LocalDate.toString support undefined
-Enhance map.GPSTrack

1.6.14
-Added zip.ZIPBuilder
-Added Timestamp.toFILETIME
-Added Timestamp.toMSDOSDate, toMSDOSTime
-Added spreadsheet.js
-Added export/XLSXExporter.js

1.6.13
-Added crypto.ICrypto, crypto.AES256GCM

1.6.12
-Added dummy/i18next.js
-Added web.getButtonElement, getDivElement, getSpanElement

1.6.11
-media.EXIFData.getPhotoLocation fixed getting problem
-Added media.EXIFData.toString
-Added cert.X509Key.signatureVerify
-Change cert.X509File.isValid to return Promise<>
-Enhance cert.js function types
-Added data.readUInt64, readMUInt64
-Added data.ByteReader.readInt64, readUInt64
-Added dummy/olayer2.js
-Enhance olayer2.js
-Added text.b64Enc and text.b64Dec

1.6.10
-web.getBrowserInfo enhance iPad Pro detection

1.6.9
-Enhance web.getBrowserInfo
-web.parseUserAgent support FxiOS (Firefox in iOS)
-leaflet.toKMLFeature() change to empty name

1.6.8
-Added text.replaceAll