@@ -134,37 +134,46 @@ declare class GeometryOptions
 	fillOpacity?: number;
 }
 
-export class MapControl
+declare class MarkerInfo
+{
+}
+
+export abstract class MapControl
 {
 	constructor();
-	createLayer(layer: map.LayerInfo, options?: LayerOptions): any;
-	createMarkerLayer(name: string, options?: LayerOptions): any;
-	createGeometryLayer(name: string, options?: LayerOptions): any;
-	addLayer(layer: any): void;
-	addKMLFeature(feature: kml.Feature): void;
-	uninit(): void;
-	zoomIn(): void;
-	zoomOut(): void;
-	zoomScale(scale: number): void;
-	panTo(pos: math.Coord2D): void;
-	panZoomScale(pos: math.Coord2D, scale: number): void;
-	zoomToExtent(extent: math.RectArea): void;
-	handleMouseLClick(clickFunc: (mapPos: math.Coord2D, scnPos: math.Coord2D)=>void): void;
-	handleMouseMove(moveFunc: (mapPos: math.Coord2D)=>void): void;
-	handlePosChange(posFunc: (mapPos: math.Coord2D)=>void): void;
-	map2ScnPos(mapPos: math.Coord2D): math.Coord2D;
-	scn2MapPos(scnPos: math.Coord2D): math.Coord2D;
+	abstract getDiv(): HTMLDivElement;
+	abstract createLayer(layer: map.LayerInfo, options?: LayerOptions): any;
+	abstract createMarkerLayer(name: string, options?: LayerOptions): any;
+	abstract createGeometryLayer(name: string, options?: LayerOptions): any;
+	abstract addLayer(layer: any): void;
+	abstract addKML(feature: kml.Feature | kml.KMLFile): void;
+	abstract uninit(): void;
+	abstract zoomIn(): void;
+	abstract zoomOut(): void;
+	abstract zoomScale(scale: number): void;
+	abstract panTo(pos: math.Coord2D): void;
+	abstract panZoomScale(pos: math.Coord2D, scale: number): void;
+	abstract zoomToExtent(extent: math.RectArea): void;
+	abstract handleMouseLClick(clickFunc: (mapPos: math.Coord2D, scnPos: math.Coord2D)=>void): void;
+	abstract handleMouseMove(moveFunc: (mapPos: math.Coord2D)=>void): void;
+	abstract handlePosChange(posFunc: (mapPos: math.Coord2D)=>void): void;
+	abstract map2ScnPos(mapPos: math.Coord2D): math.Coord2D;
+	abstract scn2MapPos(scnPos: math.Coord2D): math.Coord2D;
 
-	createMarker(mapPos: math.Coord2D, imgURL: string, imgWidth: number, imgHeight: number, options?: MarkerOptions): any;
-	layerAddMarker(markerLayer: any, marker: any): void;
-	layerRemoveMarker(markerLayer: any, marker: any): void;
-	layerClearMarkers(markerLayer: any): void;
-	markerIsOver(marker: any, scnPos: math.Coord2D): boolean;
+	abstract createMarker(mapPos: math.Coord2D, imgURL: string, imgWidth: number, imgHeight: number, options?: MarkerOptions): MarkerInfo;
+	abstract layerAddMarker(markerLayer: any, marker: MarkerInfo): void;
+	abstract layerRemoveMarker(markerLayer: any, marker: MarkerInfo): void;
+	abstract layerClearMarkers(markerLayer: any): void;
+	abstract layerMoveMarker(markerLayer: any, marker: MarkerInfo, mapPos: math.Coord2D): MarkerInfo;
+	abstract markerUpdateIcon(markerLayer: any, marker: MarkerInfo, url: string): MarkerInfo;
+	abstract markerIsOver(marker: MarkerInfo, scnPos: math.Coord2D): boolean;
+	abstract markerShowPopup(marker: MarkerInfo, content: string, w?: number, h?: number): void;
+	abstract hidePopup();
 
-	createGeometry(geom: geometry.Vector2D, options: GeometryOptions): any;
-	layerAddGeometry(geometryLayer: any, geom: any): void;
-	layerRemoveGeometry(geometryLayer: any, geom: any): void;
-	layerClearGeometries(geometryLayer: any): void;
+	abstract createGeometry(geom: geometry.Vector2D, options: GeometryOptions): any;
+	abstract layerAddGeometry(geometryLayer: any, geom: any): void;
+	abstract layerRemoveGeometry(geometryLayer: any, geom: any): void;
+	abstract layerClearGeometries(geometryLayer: any): void;
 }
 
 declare class OWSSpatialReference
